styles/index.css
:root{
    --white: white;
    --dark-gray: #333;
    --xlpink: #ffe5ec;
    --lpink: #ffc2d1;
    --mpink: #eaa8b9;
    --dpink: #ff8fab;
    --maroon: #E7456D;
}

body{
    background-color:var(--xlpink);
    margin:0;
    padding:0;   
    font-family: cutivemono, monospace;
}

h1, h2, h3, h4, h5, h6, button, form, input, textarea,select{
    font-family: cutivemono, monospace;
}

h2{
    text-align: center;
    background-color: var(--lpink);
    padding: 10px;
    color: var(--maroon);
    border-radius:10px;
}
header{
    display:flex;
    align-items: center;
    justify-content: space-between;
    background-color: var(--white);
    padding: 10px 40px;
}

header{
    display:flex;
    align-items: center;
    justify-content: space-between;
    background-color: var(--white);
    padding: 10px 40px;
}
.logo img{
    height:40px;
    width:auto;
    vertical-align: middle;
    margin-right:auto;
}
#nav{
  display:flex;
  justify-content: flex-end;
  list-style-type: none;
  margin:0;
  padding:0;
}
.navLi{
    float: left;

}
.navA{
    color: var(--dark-gray);
    display: block;
    text-decoration: none;
}
li.navLi .navA{
    padding-top: 16px;
    padding-bottom: 16px;
    padding-left: 18px;
    padding-right: 18px;
}
li.navLi a:hover{
    text-decoration: none;
    background-color: var(--dpink);
    color:var(--white);
}
.active{
    background-color: var(--maroon);
    color:var(--white);
}



footer {
    background-color: var(--dpink);
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px 40px;
    flex-wrap: wrap;
}

footer img {
    width: 36px;
    height: 36px;
}

.footerLeft, .footerRight {
    flex: 0 1 auto;
}

.footerLeft a {
    text-decoration: none;
}

.footerRight {
    text-align: left;
}

.footerRight a {
    color: white;
    text-decoration: none;
}

.footerRight a:hover {
    text-decoration: underline;
}

@media (max-width: 700px) {
    footer {
        flex-direction: column;
        gap: 16px;
        text-align: center;
        padding: 20px;
    }

    .logo img{
        display: none;
    }
}

